Added clear search button and font awesome

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -35,6 +35,10 @@
       rel="stylesheet"
       href="https://bootswatch.com/4/sandstone/bootstrap.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
+    />
     <title>ors</title>
   </head>
   <body>
