Changed from sandstone to materia

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -33,7 +33,7 @@
     ></script>
     <link
       rel="stylesheet"
-      href="https://bootswatch.com/4/sandstone/bootstrap.min.css"
+      href="https://bootswatch.com/4/materia/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
