Starting google ads

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -39,6 +39,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
     />
+    <script
+      data-ad-client="ca-pub-4626676490556494"
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+    ></script>
     <title>ors</title>
   </head>
   <body>
