--- a/client/public/index.html
+++ b/client/public/index.html
@@ -39,6 +39,23 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"
     />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-13MKF7DJWK"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'G-13MKF7DJWK');
+    </script>
+
+    <!-- Google AdSense -->
     <script
       data-ad-client="ca-pub-4626676490556494"
       async
