Changed description to hopefully improve SEO

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A free international polling, voting, and information gathering application. Promotes individual liberty and free flow of data."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -91,7 +91,7 @@
         color: var(--primary);
       }
     </style>
-    <title>OneRandomSample</title>
+    <title>One Random Sample</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -117,7 +117,7 @@
     </div>
     <footer class="text-white bg-dark text-center">
       <ul class="footer-left">
-        <li>OneRandomSample <span id="year"></span> &copy;</li>
+        <li>One Random Sample <span id="year"></span> &copy;</li>
         <li>Created by <span class="name">Michal Stachnik</span></li>
       </ul>
       <ul class="footer-right">
