--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="A free international polling, voting, and information gathering application. Promotes individual liberty and free flow of data."
+      content="A free international voting, polling, and information gathering application. Promotes individual liberty and free flow of data."
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
