--- a/client/public/index.html
+++ b/client/public/index.html
@@ -97,7 +97,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!-- Adsterra -->
-    <div class="adsterra">
+    <!-- <div class="adsterra">
       <script type="text/javascript">
         atOptions = {
           key: 'c9b14b6db2d52d40cc7593e19ef20efc',
@@ -114,7 +114,7 @@
             'ipt>'
         );
       </script>
-    </div>
+    </div> -->
     <footer class="text-white bg-dark text-center">
       <ul class="footer-left">
         <li>One Random Sample <span id="year"></span> &copy;</li>
