Fixed some styles

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -87,6 +87,12 @@
         flex: 1;
       }
 
+      footer ul.footer-left {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+      }
+
       footer .name {
         color: var(--primary);
       }
