--- a/client/public/index.html
+++ b/client/public/index.html
@@ -21,6 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- jQuery -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -30,6 +31,7 @@
     <!-- Popper.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 
+    <!-- Bootstrap -->
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
@@ -102,25 +104,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!-- Adsterra -->
-    <!-- <div class="adsterra">
-      <script type="text/javascript">
-        atOptions = {
-          key: 'c9b14b6db2d52d40cc7593e19ef20efc',
-          format: 'iframe',
-          height: 50,
-          width: 320,
-          params: {}
-        };
-        document.write(
-          '<scr' +
-            'ipt type="text/javascript" src="http' +
-            (location.protocol === 'https:' ? 's' : '') +
-            '://www.madcpms.com/c9b14b6db2d52d40cc7593e19ef20efc/invoke.js"></scr' +
-            'ipt>'
-        );
-      </script>
-    </div> -->
     <footer class="text-white bg-dark text-center">
       <ul class="footer-left">
         <li>One Random Sample <span id="year"></span> &copy;</li>
